# TrustPay

./: .gitignore  README.md  hardhat.config.js  index.html  package-lock.json  package.json
artifacts/@openzeppelin/contracts/security/ReentrancyGuard.sol/: ReentrancyGuard.dbg.json
assets/: ConnectorUtil-CUVGwVcP.js  ConstantsUtil-0Xzud7gl.js  SIWXUtil-CUpnE8WW.js  basic-BQ1zjYrB.js  ccip-BoB4aapX.js  core-BP_uGZ55.js  dist-B5xhHcaU.js  dist-CRyMzEDY.js  en_US-SK3WV2N3-PtztsbpL.js  esm-CI2IPO8T.js  events-nh5c0Irv.js  index-52ukuw5M.css  index-BiyKB0fZ.js  index.es-B_VWY4nv.js  index.es-D4f9Birg.js  index.es-o7JuF3nn.js  metamask-sdk-B5suHHgi.js  secp256k1-DCbfbffX.js  secp256k1-k825wIMw.js  stringify-0QtNG-7W.js  w3m-modal-C34oJUyL.js  wui-text-CNwO0U6v.js
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend-ts/: package-lock.json  package.json
backend-ts/prisma/: schema.prisma
backend-ts/prisma/migrations/20260617195914_init/: migration.sql
backend-ts/src/: server.ts  simulate.ts
contracts/: TrustPay.sol
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  abi.ts  index.css  main.tsx
scripts/: deploy.js
test/: TrustPay.test.js
