[package]
name = "trustpay-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
anyhow = "1.0"
bigdecimal = "0.3"
uuid = { version = "1.7", features = ["v4"] }
